# ShanghaiTech-Courses

./: .gitattributes  .gitignore  README.md
ARTS1303-Unity游戏创作/: README.md
ARTS1407-用户体验与创新设计/: README.md
ARTS1421-交互设计概论/: README.md
ARTS1423-交互产品设计/: README.md
ARTS1424-三维视觉概念设计/: README.md  hw2.pptx
ARTS1426-混合现实设计/: README.md
ARTS1431-增材制造/: README.md
ARTS1701-设计思维:产品与交互设计的创新方案	/: README.md
BIO1011-现代生命科学导论C/: README.md
BIO1011-现代生命科学导论C/homework/: 生导 Pre 5.pptx  生导 Pre 6.pptx  生导 Pre 7.pptx  生导-pre2.pptx  生导pre-1.pptx  生导pre-3.pptx  生导prePPT4.pptx
BIO2084-人工智能蛋白质设计/: README.md
BME1304-脑科学与脑疾病/: README.md
BME1312-人工智能在医学影像中的应用/: README.md
BME1312-人工智能在医学影像中的应用/project1/: example.ipynb  main.ipynb
BME1312-人工智能在医学影像中的应用/project1/modules/: data_process_disused.py  dataset.py  solver.py  (+1 more)
BME2003-神经信号的采集与人机智能技术概览/: README.md
BME2003-神经信号的采集与人机智能技术概览/project/: KNN.ipynb  README.md  mlp.ipynb  pre-neural-signal.pptx  svm.ipynb  test.ipynb  xpj.ipynb
CLGE1005-中国殷周青铜器的起源与文化/: README.md  青铜器-考试样题.docx
CS100-计算机编程/: README.md
CS101-算法与数据结构/: README.md
CS110-计算机体系结构I/: README.md
CS110-计算机体系结构I/homework/: hw2.html  hw3.html  hw6.html  hw7.html
CS110-计算机体系结构I/lab/: Lab 1 - Computer Architecture I - ShanghaiTech University.html  Lab 10 - Computer Architecture I - ShanghaiTech University.html  Lab 11 - Computer Architecture I - ShanghaiTech University.html  Lab 12 - Computer Architecture I - ShanghaiTech University.html  Lab 13 - Computer Architecture I - ShanghaiTech University.html  Lab 2 - Computer Architecture I - ShanghaiTech University.html  Lab 3 - Computer Architecture I - ShanghaiTech University.html  Lab 4 - Computer Architecture I - ShanghaiTech University.html  Lab 5 - Computer Architecture I - ShanghaiTech University.html  Lab 6 - Computer Architecture I - ShanghaiTech University.html  Lab 7 - Computer Architecture I - ShanghaiTech University.html  Lab 8 - Computer Architecture I - ShanghaiTech University.html  Lab 9.html
CS110P-计算机体系结构课程设计/: README.md
CS121-并行计算/: README.md
CS171-计算机图形学I/: README.md
CS171-计算机图形学I/homework/cs171-assignment2-skkk256/: CMakeLists.txt  LICENSE  README.md
CS171-计算机图形学I/homework/cs171-assignment2-skkk256/include/: PointShader.frag  PointShader.vert  SimpleShader.frag  SimpleShader.vert  bezier.h  bspline.h  camera.h  data.h  defines.h  object.h  shader.frag  shader.h  shader.vert  utils.h
CS171-计算机图形学I/homework/cs171-assignment2-skkk256/src/: bezier.cpp  bspline.cpp  main.cpp  object.cpp  shader.cpp  utils.cpp
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  cmake_command.sh
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/data/: README.md  cbox.json  cbox_photon.json  complex_sphere.json  env_sphere_1.json  ext.cmake  glass_cbox.json  glass_sphere.json  matpreview.json  photon.json  rough_cbox.json  sphere.exr  sphere.json  two_spheres.json  validate.sh  veach.json  veach_bidir.json  veach_debug.json
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/data/mitsuba/: cbox.xml  cbox_photon.xml  env_sphere_1.xml  glass_sphere.xml  matpreview.xml  sphere.xml  two_spheres.xml  veach.xml  veach_bidir.xml  veach_debug.xml
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/include/rdr/: accel.h  all_integrators.h  bsdf.h  bvh_accel.h  bvh_tree.h  camera.h  canary.h  factory.h  film.h  fresnel.h  fwd.h  integrator.h  interaction.h  light.h  load_obj.h  math_aliases.h  math_utils.h  mipmap.h  object.h  path.h  platform.h  primitive.h  properties.h  ray.h  rdr.h  render.h  rfilter.h  scene.h  shape.h  std.h  texture.h
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/src/: CMakeLists.txt  accel.cpp  bsdf.cpp  bvh_accel.cpp  camera.cpp  conventions.cpp  exrtools.cpp  film.cpp  integrator.cpp  interaction.cpp  light.cpp  load_obj.cpp  main.cpp  mipmap.cpp  path.cpp  primitive.cpp  properties.cpp  render.cpp  scene.cpp  shape.cpp  texture.cpp
CS171-计算机图形学I/homework/cs171-assignment3-skkk256/tests/: CMakeLists.txt  config_template.h  distribution_tests.cpp  factory_tests.cpp  integration_tests.cpp  math_tests.cpp  properties_tests.cpp  texture_tests.cpp
CS171-计算机图形学I/project/: Paper Reading.pptx  cg final.pptx
CS172-计算机视觉I/: README.md
CS181-人工智能I/: README.md
CS182-机器学习引论/: README.md
CS182-机器学习引论/project/: iml-pre.pptx  predict.ipynb
CS280-深度学习/: README.md
CS284-SLAM/: README.md
CS284-SLAM/homework/hw4/: CMakeLists.txt  README.md  direct_dense.cpp  direct_sparse.cpp
CS284-SLAM/project/: CS284_Projects_2024.pptx  seminars.pptx
ECON1001-经济学导论/: README.md  overview.md  宏观经济学.md  微观经济学.md
EE142-基础信息论/: README.md
EE150-信号与系统/: README.md
EE150L-信号与系统实验/: README.md
GEHA1004-科技文明通论/: README.md
GEHA1050-中华文明通论/: README.md  final.docx
GEHA1121-基础英语I/: README.md
GEHA1124-小说阅读与批评/: README.md
GEHA1132-基础英语II人文阅读/: README.md
GEHA1162-后殖民时代的南亚/: README.md
GEHA1174-美国文学与美国梦的始与终/: American-Dreams_Essay.docx  README.md
GEHA1203-中国历史地理/: README.md
GEHA1203-中国历史地理/homework/: pre.pptx
GEHA1203-中国历史地理/resources/: 华夏边缘：历史记忆与族群认同 (王明珂) (Z-Library).epub
GEMA1009-数学分析I/: README.md
GEMA1010-数学分析II/: README.md
GESS1018-中国近代史纲要/: (完整版)中国近现代史纲要课后习题答案及备考题库.doc  README.md  《纲要》复习题集.doc  读书报告.docx
GESS1023-毛概/: README.md
GESS1027-马克思主义原理/: README.md  马原期中作业.docx
GESS1028-思想道德与法治/: README.md
GESS1029-托克维尔《论美国的民主》精读/: README.md  论美国的民主.docx
MATH1112-线性代数I/: README.md
MT1013-法治与社会/: README.md  法制与社会案例分析.docx
PHYS1111-普通物理I实验/: README.md
PHYS1181-普通物理I/: README.md
PHYS1181-普通物理I/homework/: hw1.txt
SI100B-信息科学技术导论/: README.md
SI120-离散数学/: README.md
SI140A-面向信息科学的概率论与数理统计/: README.md
(+201 files in other folders)
